# wzcalc-fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
images/: wzcalc.xcf
src/: main.py
src/calc/: router.py  schemas.py  service.py
src/calc/core/calculators/: common.py  ozon.py  wildberries.py
src/calc/core/domain/: cm_calcdata.py  enums.py  oz_calcdata.py  wb_calcdata.py
src/calc/core/interfaces/: oz_interfaces.py  oz_utils.py  wb_interfaces.py
src/calc/core/interfaces/utils/: cm_utils.py  oz_utils.py  wb_utils.py
src/calc/core/services/: oz_services.py  wb_services.py
src/calc/core/services/utils/: oz_utils.py  wb_utils.py
src/calc/service/: readme.txt
src/calc/service/calculators/: calcdata.py  common.py
src/calc/service/calculators/oz/: calcdata_oz.py  logistics_oz.py
src/calc/service/calculators/wb/: calcdata_wb.py  logistics_wb.py
src/calc/service/service_oz/: logistics_oz.py
src/calc/service/service_wb/: logistics_wb.py
src/calc/tooling/: calcdata.py  calculators_oz.py  calculators_wb.py
src/check/: router.py  schemas.py
tests/: payloads.py  test_calc_oz.py  test_calc_wb.py  test_check.py
tests/integration/oz/: conftest.py  test_api_validation_bad.py  test_api_validation_good.py
tests/integration/wb/: conftest.py  test_api_validation_bad.py  test_api_validation_good.py
tests/unit/: conftest.py  test_calcs_oz.py
tests/unit/calculators/oz/: conftest.py  test_calcs_oz.py
tests/unit/calculators/wb/: conftest.py  test_calcs_wb.py  text_calcs_wb.py
tests/unit/deprecated/oz/: conftest.py  test_calcs_oz.py
tests/unit/deprecated/wb/: test_calcs_wb.py
tests/unit/oz/: conftest.py  test_calcs_oz.py
tests/unit/wb/: confest.py  test_calcs_wb.py
